--- a/courseraIbmPractice/stylingWebPageEx/styles.css
+++ b/courseraIbmPractice/stylingWebPageEx/styles.css
@@ -1,1 +1,17 @@
+h3 {
+    color: darkgreen;
+    text-align: left;
+}
 
+table {
+    border: 2px solid black;
+    background-color: lightblue;
+}
+
+td {
+    border: 2px solid black;
+}
+
+th {
+    background-color: lightgreen;
+}
