--- a/courseraIbmPractice/unitConversionHtml/style.css
+++ b/courseraIbmPractice/unitConversionHtml/style.css
@@ -69,17 +69,22 @@ figcaption {
 }
 
 button {
-    font-size: 20px;
+    font-size: 15px;
     border: transparent;
     border-radius: 40px;
     width: fit-content;
-    background-color: rgb(144, 238, 144);
+    background-color: rgb(104, 238, 144);
     padding-left: 15px;
     padding-right: 15px;
 }
 
-button::hover {
+button:hover {
     cursor: pointer;
+    background-color: rgb(100, 190, 140);
+}
+
+button:active {
+    background-color: rgb(80, 189, 50);
 }
 
 /* The calculator panel */
